--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,11 @@
-version: '3'
-services:
+version: '3.8'
+services:  
+  mysql:
+    image: mysql:latest
+    environment:
+        MYSQL_ROOT_PASSWORD: root
+    ports: 
+      - 3308:3306
   zookeeper:
     image: wurstmeister/zookeeper
     ports:
